@@ -68,6 +68,8 @@ class CollectionSetup : public KVBox
         QStringList dirs() const { return m_dirs; }
         bool recursive() const { return m_recursive && m_recursive->isChecked(); }
         bool monitor() const { return m_monitor && m_monitor->isChecked(); }
+        bool writeBackStatistics() const { return m_writeBackStatistics && m_writeBackStatistics->isChecked(); }
+        bool writeBackCover() const { return m_writeBackCover && m_writeBackCover->isChecked(); }
         bool charset() const { return m_charset && m_charset->isChecked(); }
 
         const QString modelFilePath( const QModelIndex &index ) const;
@@ -87,6 +89,7 @@ class CollectionSetup : public KVBox
         QCheckBox *m_recursive;
         QCheckBox *m_monitor;
         QCheckBox *m_writeBackStatistics;
+        QCheckBox *m_writeBackCover;
         QCheckBox *m_charset;
 };
 
