@@ -5,6 +5,7 @@ Amarok ChangeLog
 
 VERSION 2.4-Beta 1
   FEATURES:
+    * Add settings for writing statistics and album covers back to the file
     * Leave focus in playlist search widget when using up/down to scroll through
       filtered results. Thanks to Thomas Karpiniec for the patch!
     * LyricsApplet: the lyrics in are now updated when they were changed in a
